# modular-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat
assets/shaders/: fragmentShader.frag  fragmentShader.glsl  fragmentShadowShader.glsl  vertexShader.glsl  vertexShader.vert
internal/component/: cameraComponent.h  lightComponent.h  modelComponent.h  nameComponent.h  transformComponent.h
internal/core/: config.h  engine.h  renderer.h
internal/ecs/: componentManager.h  entityManager.h  systemManager.h
internal/loader/: materialLoader.h  meshLoader.h  shaderLoader.h
internal/manager/: cameraManager.h  shaderManager.h  windowManager.h
internal/model/: material.h  mesh.h
internal/rendering/resources/: material.h  mesh.h  shader.h
internal/system/: cameraSystem.h  inputSystem.h  lightSystem.h  renderSystem.h  timeSystem.h  transformSystem.h  uiSystem.h
internal/systems/: lightSystem.h  shaderSystem.h
src/core/: engine.cpp  main.cpp  renderer.cpp
src/ecs/: entityManager.cpp
src/loader/: materialLoader.cpp  meshLoader.cpp  shaderLoader.cpp
src/manager/: cameraManager.cpp  shaderManager.cpp  windowManager.cpp
src/model/: material.cpp  mesh.cpp
src/rendering/resources/: material.cpp  mesh.cpp  shader.cpp
src/system/: cameraSystem.cpp  inputSystem.cpp  lightSystem.cpp  renderSystem.cpp  shaderSystem.cpp  timeSystem.cpp  transformSystem.cpp  uiSystem.cpp  windowSystem.cpp
src/systems/: renderSystem.cpp  sceneSystem.cpp
